--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,21 +49,28 @@
         tools:layout_editor_absoluteY="126dp"
         tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pamiršau slaptažodį"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="544dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="563dp" />
 
-    <Button
-        android:id="@+id/button3"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Neturite paskyros"
+        tools:layout_editor_absoluteX="150dp"
+        tools:layout_editor_absoluteY="668dp" />
+
+    <TextView
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registruotis"
-        tools:layout_editor_absoluteX="253dp"
-        tools:layout_editor_absoluteY="667dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="282dp"
+        tools:layout_editor_absoluteY="668dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
