--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,73 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loginActivity">
+    tools:context=".loginActivity"
+    android:background = "@color/black">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="55dp"
+        android:src="@mipmap/autogidas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/LoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Prisijungtis"
-        tools:layout_editor_absoluteX="136dp"
-        tools:layout_editor_absoluteY="484dp"
-        tools:ignore="MissingConstraints" />
+        android:text="Prisijungti"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/edittext_background"
+        android:elevation="3dp"
+        android:padding="13dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"/>
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/edittext_background"
+        android:elevation="3dp"
         android:ems="10"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
+        android:inputType="textPersonName"
+        android:padding="13dp"
         android:text="Slaptažodis"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="400dp" />
+        android:textColor="#888887"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/edittext_background"
+        android:elevation="3dp"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:minHeight="48dp"
+        android:minHeight="30dp"
+        android:padding="13dp"
+        android:textColor="#888887"
         android:text="Elektroninis paštas"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="286dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="212dp"
-        android:layout_height="45dp"
-        android:text="Prisijungimas"
-        android:textSize="30dp"
-        tools:layout_editor_absoluteX="114dp"
-        tools:layout_editor_absoluteY="126dp"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pamiršau slaptažodį"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="563dp" />
+        android:layout_marginTop="20dp"
+        android:textColor="#FF009688"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Neturite paskyros"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="668dp" />
+        android:layout_marginTop="90dp"
+        android:layout_marginRight="100dp"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
 
-    <TextView
+    <Button
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Registruotis"
-        tools:layout_editor_absoluteX="282dp"
-        tools:layout_editor_absoluteY="668dp" />
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="77dp"
+        android:textColor="#FF009688"
+        android:background="@drawable/edittext_background"
+        android:elevation="3dp"
+        android:ems="10"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LoginButton"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
