--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="#6200EE"
+            android:background="#FF03DAC5"
             app:popupTheme="@style/Theme.AgroGidas.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
