--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loginActivity"
-    android:background = "@color/black">
+    tools:context=".loginActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginTop="55dp"
-        android:src="@mipmap/autogidas"
+        android:src="@drawable/darkbright"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +81,7 @@
         android:text="Neturite paskyros"
         android:layout_marginTop="90dp"
         android:layout_marginRight="100dp"
-        android:textColor="#FFFFFF"
+        android:textColor="#888887"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
@@ -94,7 +93,7 @@
         android:text="Registruotis"
         android:layout_marginLeft="200dp"
         android:layout_marginTop="77dp"
-        android:textColor="#FF009688"
+        android:textColor="#FF000000"
         android:background="@drawable/edittext_background"
         android:elevation="3dp"
         android:ems="10"
