--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -337,11 +337,22 @@
         android:layout_width="wrap_content"
         android:layout_height="347dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="445dp"
+        android:layout_marginTop="500dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/divider8"
         app:layout_constraintTop_toBottomOf="@+id/divider8"
         app:srcCompat="@mipmap/pasiulymai" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="390dp"
+        android:layout_marginLeft="10dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="450dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/divider8"
+        app:layout_constraintTop_toBottomOf="@+id/divider8"
+        android:text="PAIEŠKA" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
