--- a/app/src/main/res/layout/home_bar_logo.xml
+++ b/app/src/main/res/layout/home_bar_logo.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@mipmap/barlogo" />
+        android:src="@mipmap/tekstasb" />
 </RelativeLayout>
