--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,12 +64,13 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/forgot"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:text="Pamiršau slaptažodį"
         android:layout_marginTop="20dp"
         android:textColor="#FF009688"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
@@ -78,27 +79,27 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Neturite paskyros"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="100dp"
+        android:text="Neturite paskyros?"
         android:textColor="#888887"
-        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LoginButton" />
 
-    <Button
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registruotis"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="77dp"
-        android:textColor="#FF000000"
-        android:background="@drawable/edittext_background"
+    <TextView
+        android:id="@+id/registr"
+        android:layout_width="76dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="5dp"
         android:elevation="3dp"
         android:ems="10"
-        app:layout_constraintEnd_toEndOf ="parent"
+        android:clickable="true"
+        android:text="Registruotis"
+        android:textColor="#FF009688"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LoginButton"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
