--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:title="Pagrindinis puslapis" />
+
         <item
             android:id="@+id/loginActivity"
-            android:title="Prisijungimas" />
+            android:title="Atsijungti" />
+        <item
+            android:id="@+id/menukontaktai"
+            android:title="Kontaktai" />
+
+
     </group>
 </menu>
