--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,9 +38,9 @@
         android:background="@drawable/edittext_background"
         android:elevation="3dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:padding="13dp"
-        android:text="Slaptažodis"
+        android:hint="Slaptažodis"
         android:textColor="#888887"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:minHeight="30dp"
         android:padding="13dp"
         android:textColor="#888887"
-        android:text="Elektroninis paštas"
+        android:hint="Elektroninis paštas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"/>
@@ -93,9 +93,9 @@
         android:layout_width="76dp"
         android:layout_height="48dp"
         android:layout_marginTop="5dp"
+        android:clickable="true"
         android:elevation="3dp"
         android:ems="10"
-        android:clickable="true"
         android:text="Registruotis"
         android:textColor="#FF009688"
         app:layout_constraintEnd_toEndOf="parent"
