--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -27,7 +27,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:padding="13dp"
-        android:text="Vardas"
+        android:hint="Vardas"
         android:textColor="#888887"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -44,7 +44,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:padding="13dp"
-        android:text="Pavardė"
+        android:hint="Pavardė"
         android:textColor="#888887"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -61,7 +61,7 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:padding="13dp"
-        android:text="Elektroninis paštas"
+        android:hint="Elektroninis paštas"
         android:textColor="#888887"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,8 @@
         android:elevation="3dp"
         android:ems="10"
         android:padding="13dp"
-        android:text="Slaptažodis"
+        android:hint="Slaptažodis"
+        android:inputType="textPassword"
         android:textColor="#888887"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
         android:backgroundTint="#FF009688"
-        android:text="REGISTRUOTIS"
+        android:hint="REGISTRUOTIS"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
