--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -17,6 +17,8 @@
         android:padding="13dp"
         android:text="Vardas"
         android:textColor="@color/black"
+        android:background="@drawable/edittext_background"
+        android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +35,9 @@
         android:ems="10"
         android:minHeight="30dp"
         android:padding="13dp"
+        android:layout_marginTop="45dp"
         android:text="Slaptazodis"
+        android:background="@drawable/edittext_background"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/snamee"
@@ -47,7 +51,9 @@
         android:ems="10"
         android:minHeight="30dp"
         android:padding="13dp"
+        android:background="@drawable/edittext_background"
         android:text="Pastas"
+        android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordd" />
@@ -58,10 +64,72 @@
         android:layout_height="wrap_content"
         android:elevation="3dp"
         android:ems="10"
+        android:background="@drawable/edittext_background"
         android:minHeight="30dp"
         android:padding="13dp"
         android:text="Pavarde"
+        android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/namee" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="3dp"
+        android:ems="10"
+        android:minHeight="30dp"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:text="Vardas"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/textView16"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="3dp"
+        android:ems="10"
+        android:minHeight="30dp"
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:text="Pavarde"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/snamee"/>
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="3dp"
+        android:ems="10"
+        android:minHeight="30dp"
+        android:textStyle="bold"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:text="Slaptazodis"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/passwordd"/>
+
+    <TextView
+        android:id="@+id/textView18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="3dp"
+        android:textStyle="bold"
+        android:ems="10"
+        android:minHeight="30dp"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:text="Pastas"
+        app:layout_constraintEnd_toEndOf ="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/emaill"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
